# backend-scraper

./: README.md  pyproject.toml
api/: main.py
api/routers/: assets.py  health.py  heatmap.py  ingest.py  jobs.py
api/schemas/: base.py  heatmap.py  ingest.py
core/pipeline/: jobs.py  normalize.py
core/scoring/: engine.py  features.py  weights.yaml
docker/: Dockerfile.api  Dockerfile.worker  compose.yml
infra/: db.py  logging.py  redis.py  settings.py
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/e2e/: test_happy_path.py
tests/unit/: test_engine.py
